// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider matches snapshot (range values) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c6 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  font-size: 0.75rem;
  padding: var(--spacing-half) var(--spacing-1x);
  position: absolute;
  top: 2.5rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 50% -0.49rem;
  -ms-transform-origin: 50% -0.49rem;
  transform-origin: 50% -0.49rem;
  -webkit-transition: -webkit-transform 0.12s;
  -webkit-transition: transform 0.12s;
  transition: transform 0.12s;
}

.c6::before {
  border-color: transparent transparent #60666E transparent;
  border-style: solid;
  border-width: 0 0.5rem 0.5rem;
  content: '';
  height: 0;
  left: 50%;
  position: absolute;
  top: -0.49rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 0;
}

.c7 {
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2px;
}

.c3 {
  padding: 0 12px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8px;
  padding: 8px 0;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  touch-action: none;
  width: 100%;
}

.c4 .base-Slider-rail {
  background-color: #DBDEE1;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
  width: 100%;
}

.c4 .base-Slider-track {
  background-color: #006296;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
}

.c4 .base-Slider-thumb {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -16px;
  position: absolute;
  width: 32px;
}

.c4 .base-Slider-thumb::before {
  background-color: #FFFFFF;
  border: 2px solid #006296;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  display: block;
  height: 24px;
  left: 50%;
  outline: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition-duration: 120ms;
  transition-duration: 120ms;
  -webkit-transition-property: box-shadow,width,height;
  transition-property: box-shadow,width,height;
  width: 24px;
}

.c4 .base-Slider-thumb.base--active::before,
.c4 .base-Slider-thumb:hover::before {
  height: 32px;
  width: 32px;
}

.c4 .base-Slider-thumb.base--focusVisible::before {
  box-shadow: inset 0 0 0 2px #84C6EA;
}

.c4 .base-Slider-thumb.base--active::before {
  box-shadow: inset 0 0 0 2px #006296;
}

.c4 .base-Slider-thumb.base--focusVisible .c5,
.c4 .base-Slider-thumb:hover .c5 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 .base-Slider-mark {
  background-color: #60666E;
  border-radius: 99%;
  height: 2px;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 2px;
}

.c4 .base-Slider-markActive {
  background-color: #FFFFFF;
}

.c4.base--disabled {
  cursor: default;
  pointer-events: none;
}

.c4.base--disabled .base-Slider-rail {
  background-color: #F1F2F2;
}

.c4.base--disabled .base-Slider-track {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-thumb::before {
  border-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-mark {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-markActive {
  background-color: #FFFFFF;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    Label
  </label>
  <div
    class="c3"
  >
    <span
      class="base-Slider-root c4"
      data-testid="slider"
    >
      <span
        class="base-Slider-rail"
      />
      <span
        class="base-Slider-track"
        style="left:10%;width:20%"
      />
      <span
        class="base-Slider-thumb"
        data-index="0"
        style="left:10%"
      >
        <input
          aria-label="Label range"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="10"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border:0;clip:rect(0 0 0 0);height:100%;margin:-1px;overflow:hidden;padding:0;position:absolute;white-space:nowrap;width:100%;direction:ltr"
          type="range"
          value="10"
        />
        <div
          class="c5 c6"
        >
          10
        </div>
      </span>
      <span
        class="base-Slider-thumb"
        data-index="1"
        style="left:30%"
      >
        <input
          aria-label="Label range"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="30"
          data-index="1"
          max="100"
          min="0"
          step="1"
          style="border:0;clip:rect(0 0 0 0);height:100%;margin:-1px;overflow:hidden;padding:0;position:absolute;white-space:nowrap;width:100%;direction:ltr"
          type="range"
          value="30"
        />
        <div
          class="c5 c6"
        >
          30
        </div>
      </span>
    </span>
  </div>
  <div
    class="c7"
  >
    <span>
      0
    </span>
    <span>
      100
    </span>
  </div>
</div>
`;

exports[`Slider matches snapshot (single value) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c6 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  font-size: 0.75rem;
  padding: var(--spacing-half) var(--spacing-1x);
  position: absolute;
  top: 2.5rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 50% -0.49rem;
  -ms-transform-origin: 50% -0.49rem;
  transform-origin: 50% -0.49rem;
  -webkit-transition: -webkit-transform 0.12s;
  -webkit-transition: transform 0.12s;
  transition: transform 0.12s;
}

.c6::before {
  border-color: transparent transparent #60666E transparent;
  border-style: solid;
  border-width: 0 0.5rem 0.5rem;
  content: '';
  height: 0;
  left: 50%;
  position: absolute;
  top: -0.49rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 0;
}

.c7 {
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2px;
}

.c3 {
  padding: 0 12px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8px;
  padding: 8px 0;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  touch-action: none;
  width: 100%;
}

.c4 .base-Slider-rail {
  background-color: #DBDEE1;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
  width: 100%;
}

.c4 .base-Slider-track {
  background-color: #006296;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
}

.c4 .base-Slider-thumb {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -16px;
  position: absolute;
  width: 32px;
}

.c4 .base-Slider-thumb::before {
  background-color: #FFFFFF;
  border: 2px solid #006296;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  display: block;
  height: 24px;
  left: 50%;
  outline: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition-duration: 120ms;
  transition-duration: 120ms;
  -webkit-transition-property: box-shadow,width,height;
  transition-property: box-shadow,width,height;
  width: 24px;
}

.c4 .base-Slider-thumb.base--active::before,
.c4 .base-Slider-thumb:hover::before {
  height: 32px;
  width: 32px;
}

.c4 .base-Slider-thumb.base--focusVisible::before {
  box-shadow: inset 0 0 0 2px #84C6EA;
}

.c4 .base-Slider-thumb.base--active::before {
  box-shadow: inset 0 0 0 2px #006296;
}

.c4 .base-Slider-thumb.base--focusVisible .c5,
.c4 .base-Slider-thumb:hover .c5 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 .base-Slider-mark {
  background-color: #60666E;
  border-radius: 99%;
  height: 2px;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 2px;
}

.c4 .base-Slider-markActive {
  background-color: #FFFFFF;
}

.c4.base--disabled {
  cursor: default;
  pointer-events: none;
}

.c4.base--disabled .base-Slider-rail {
  background-color: #F1F2F2;
}

.c4.base--disabled .base-Slider-track {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-thumb::before {
  border-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-mark {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-markActive {
  background-color: #FFFFFF;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    Label
  </label>
  <div
    class="c3"
  >
    <span
      class="base-Slider-root c4"
      data-testid="slider"
    >
      <span
        class="base-Slider-rail"
      />
      <span
        class="base-Slider-track"
        style="left:0%;width:20%"
      />
      <span
        class="base-Slider-thumb"
        data-index="0"
        style="left:20%"
      >
        <input
          aria-label="Label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border:0;clip:rect(0 0 0 0);height:100%;margin:-1px;overflow:hidden;padding:0;position:absolute;white-space:nowrap;width:100%;direction:ltr"
          type="range"
          value="20"
        />
        <div
          class="c5 c6"
        >
          20
        </div>
      </span>
    </span>
  </div>
  <div
    class="c7"
  >
    <span>
      0
    </span>
    <span>
      100
    </span>
  </div>
</div>
`;

exports[`Slider matches snapshot (with step) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c6 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  font-size: 0.75rem;
  padding: var(--spacing-half) var(--spacing-1x);
  position: absolute;
  top: 2.5rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 50% -0.49rem;
  -ms-transform-origin: 50% -0.49rem;
  transform-origin: 50% -0.49rem;
  -webkit-transition: -webkit-transform 0.12s;
  -webkit-transition: transform 0.12s;
  transition: transform 0.12s;
}

.c6::before {
  border-color: transparent transparent #60666E transparent;
  border-style: solid;
  border-width: 0 0.5rem 0.5rem;
  content: '';
  height: 0;
  left: 50%;
  position: absolute;
  top: -0.49rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 0;
}

.c7 {
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2px;
}

.c3 {
  padding: 0 12px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8px;
  padding: 8px 0;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  touch-action: none;
  width: 100%;
}

.c4 .base-Slider-rail {
  background-color: #DBDEE1;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
  width: 100%;
}

.c4 .base-Slider-track {
  background-color: #006296;
  border-radius: 99px;
  display: block;
  height: 8px;
  margin-left: -12px;
  padding: 0 12px;
  position: absolute;
}

.c4 .base-Slider-thumb {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -16px;
  position: absolute;
  width: 32px;
}

.c4 .base-Slider-thumb::before {
  background-color: #FFFFFF;
  border: 2px solid #006296;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  display: block;
  height: 24px;
  left: 50%;
  outline: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition-duration: 120ms;
  transition-duration: 120ms;
  -webkit-transition-property: box-shadow,width,height;
  transition-property: box-shadow,width,height;
  width: 24px;
}

.c4 .base-Slider-thumb.base--active::before,
.c4 .base-Slider-thumb:hover::before {
  height: 32px;
  width: 32px;
}

.c4 .base-Slider-thumb.base--focusVisible::before {
  box-shadow: inset 0 0 0 2px #84C6EA;
}

.c4 .base-Slider-thumb.base--active::before {
  box-shadow: inset 0 0 0 2px #006296;
}

.c4 .base-Slider-thumb.base--focusVisible .c5,
.c4 .base-Slider-thumb:hover .c5 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 .base-Slider-mark {
  background-color: #60666E;
  border-radius: 99%;
  height: 2px;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 2px;
}

.c4 .base-Slider-markActive {
  background-color: #FFFFFF;
}

.c4.base--disabled {
  cursor: default;
  pointer-events: none;
}

.c4.base--disabled .base-Slider-rail {
  background-color: #F1F2F2;
}

.c4.base--disabled .base-Slider-track {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-thumb::before {
  border-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-mark {
  background-color: #B7BBC2;
}

.c4.base--disabled .base-Slider-markActive {
  background-color: #FFFFFF;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    Label
  </label>
  <div
    class="c3"
  >
    <span
      class="base-Slider-root c4"
      data-testid="slider"
    >
      <span
        class="base-Slider-rail"
      />
      <span
        class="base-Slider-track"
        style="left:0%;width:30%"
      />
      <span
        class="base-Slider-mark base-Slider-markActive"
        data-index="0"
        style="left:0%"
      />
      <span
        class="base-Slider-mark base-Slider-markActive"
        data-index="1"
        style="left:10%"
      />
      <span
        class="base-Slider-mark base-Slider-markActive"
        data-index="2"
        style="left:20%"
      />
      <span
        class="base-Slider-mark base-Slider-markActive"
        data-index="3"
        style="left:30%"
      />
      <span
        class="base-Slider-mark"
        data-index="4"
        style="left:40%"
      />
      <span
        class="base-Slider-mark"
        data-index="5"
        style="left:50%"
      />
      <span
        class="base-Slider-mark"
        data-index="6"
        style="left:60%"
      />
      <span
        class="base-Slider-mark"
        data-index="7"
        style="left:70%"
      />
      <span
        class="base-Slider-mark"
        data-index="8"
        style="left:80%"
      />
      <span
        class="base-Slider-mark"
        data-index="9"
        style="left:90%"
      />
      <span
        class="base-Slider-mark"
        data-index="10"
        style="left:100%"
      />
      <span
        class="base-Slider-thumb"
        data-index="0"
        style="left:30%"
      >
        <input
          aria-label="Label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="30"
          data-index="0"
          max="100"
          min="0"
          step="10"
          style="border:0;clip:rect(0 0 0 0);height:100%;margin:-1px;overflow:hidden;padding:0;position:absolute;white-space:nowrap;width:100%;direction:ltr"
          type="range"
          value="30"
        />
        <div
          class="c5 c6"
        >
          30
        </div>
      </span>
    </span>
  </div>
  <div
    class="c7"
  >
    <span>
      0
    </span>
    <span>
      100
    </span>
  </div>
</div>
`;
